<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/FrameSetGroup"
            android:layout_weight="2"
            android:layout_marginBottom="@dimen/frame_set_margin">
            <TextView
                style="@style/TextView.frameSetHeader"
                android:id="@+id/camera_label"
                android:text="@string/camera_label"/>
            <LinearLayout
                style="@style/TextArea">
                <LinearLayout
                    style="@style/TextLine.Top"
                    android:id="@+id/camera_frame_duration_line">
                    <TextView
                        style="@style/TextView.TextLabel"
                        android:text="@string/camera_frame_duration" />
                    <TextView
                        android:id="@+id/camera_frame_duration"
                        style="@style/TextView.TextValue" />
                </LinearLayout>
                <LinearLayout
                    style="@style/TextLine"
                    android:id="@+id/camera_record_duration_line">
                    <TextView
                        android:text="@string/camera_record_duration"
                        style="@style/TextView.TextLabel" />
                    <TextView
                        android:id="@+id/camera_record_duration"
                        style="@style/TextView.TextValue" />
                </LinearLayout>
                <LinearLayout
                    style="@style/TextLine"
                    android:id="@+id/camera_frames_line">
                    <TextView
                        android:text="@string/camera_frames"
                        style="@style/TextView.TextLabel" />
                    <TextView
                        android:id="@+id/camera_frames"
                        style="@style/TextView.TextValue" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/FrameSetGroup"
            android:layout_weight="3">
            <TextView
                style="@style/TextView.frameSetHeader"
                android:id="@+id/video_label"
                android:text="@string/video_label" />
            <LinearLayout
                style="@style/TextArea">
                <LinearLayout
                    style="@style/TextLine.Top"
                    android:id="@+id/video_frame_rate_line">
                    <TextView
                        android:text="@string/video_frame_rate"
                        style="@style/TextView.TextLabel" />
                    <TextView
                        android:id="@+id/video_frame_rate"
                        style="@style/TextView.TextValue" />
                </LinearLayout>
                <LinearLayout
                    style="@style/TextLine"
                    android:id="@+id/video_duration_line">
                    <TextView
                        android:text="@string/video_duration"
                        style="@style/TextView.TextLabel" />
                    <TextView
                        android:id="@+id/video_duration"
                        style="@style/TextView.TextValue" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>