<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FrameSetGroup"
    android:orientation="vertical"
    tools:context=".fragments.TimeSetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            style="@style/TextView.frameSetHeader"
            android:layout_gravity="center_horizontal"
            android:id="@+id/edit_msg" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/edit_days_label"
                    style="@style/timeEdit.label"
                    android:text="@string/text_days"
                    android:visibility="gone"/>
                <TextView
                    style="@style/timeEdit.label"
                    android:text="@string/text_hours" />
                <TextView
                    android:text="@string/text_minutes"
                    style="@style/timeEdit.label" />
                <TextView
                    android:text="@string/text_seconds"
                    style="@style/timeEdit.label" />
                <TextView
                    android:text="@string/text_milliseconds"
                    style="@style/timeEdit.label" />
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    style="@style/timeEdit.cell"
                    android:id="@+id/edit_days"
                    android:hint="00"
                    android:visibility="gone"/>
                <EditText
                    style="@style/timeEdit.cell"
                    android:id="@+id/edit_hours"
                    android:hint="00"/>
                <TextView
                    style="@style/time.colon" />
                <EditText
                    style="@style/timeEdit.cell"
                    android:id="@+id/edit_minutes"
                    android:hint="00"/>
                <TextView
                    style="@style/time.colon" />
                <EditText
                    style="@style/timeEdit.cell"
                    android:id="@+id/edit_seconds"
                    android:hint="00"/>
                <TextView
                    style="@style/time.dot" />
                <EditText
                    style="@style/timeEdit.cell"
                    android:id="@+id/edit_milliseconds"
                    android:imeOptions="actionDone"
                    android:hint="000"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            style="@style/TextView.frameSetHeader"
            android:layout_gravity="center_horizontal"
            android:text="@string/choose_affect" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"></Spinner>
    </LinearLayout>

    <include layout="@layout/include_buttons" />

</LinearLayout>
